--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "mongoose": "^5.9.25"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.7.32",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
@@ -23,7 +26,7 @@
     "client-install": "npm install --prefix client",
     "start": "node -r esm server.ts",
     "server": "nodemon -r esm server.ts",
-    "client": "npm start --prefix client",
+    "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Mohamed Elashmawy",
