--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,39 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.2",
+    "@apollo/link-error": "^2.0.0-beta.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^2.0.0-beta.3",
+    "apollo-link-ws": "^1.0.20",
+    "axios": "^0.19.2",
+    "formik": "^2.1.5",
+    "formik-material-ui": "^3.0.0-alpha.0",
+    "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "next": "9.4.4",
+    "next-auth": "^3.1.0",
+    "next-with-apollo": "^5.1.0",
     "node-sass": "^4.14.1",
+    "nookies": "^2.4.0",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
-    "sass": "^1.26.10"
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "sass": "^1.26.10",
+    "yup": "^0.29.2"
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
+    "@types/yup": "^0.29.3",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.9.7"
   }
 }
