--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,5 +15,5 @@
     "jsx": "preserve"
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/apollo.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/withAuth.js"]
 }
