--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^2.0.0-beta.3",
     "apollo-link-ws": "^1.0.20",
+    "apollo-upload-client": "^14.1.1",
     "axios": "^0.19.2",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
@@ -30,6 +31,7 @@
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "sass": "^1.26.10",
@@ -37,6 +39,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@types/apollo-upload-client": "^8.1.3",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
     "@types/yup": "^0.29.3",
