--- a/package.json
+++ b/package.json
@@ -5,22 +5,18 @@
   "main": "index.ts",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express-jwt": "0.0.42",
-    "@types/express-session": "^1.17.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/shortid": "0.0.29",
     "@types/yup": "^0.29.3",
     "apollo-server": "^2.16.1",
     "apollo-server-core": "^2.16.1",
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.22.0",
     "cookie": "^0.4.1",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "graphql-middleware": "^4.0.2",
     "graphql-yoga": "^1.18.3",
@@ -28,7 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.25",
-    "next-cookies": "^2.0.3",
+    "shortid": "^2.2.15",
     "yup": "^0.29.2"
   },
   "devDependencies": {
