--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.2",
     "@apollo/link-error": "^2.0.0-beta.3",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -19,6 +20,8 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-upload-client": "^14.1.1",
     "axios": "^0.19.2",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
     "graphql": "^15.3.0",
