--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.2",
     "@apollo/link-error": "^2.0.0-beta.3",
+    "@farbenmeer/react-spring-slider": "^1.2.1",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -26,6 +27,7 @@
     "formik-material-ui": "^3.0.0-alpha.0",
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
+    "material-auto-rotating-carousel": "^3.0.2",
     "next": "9.4.4",
     "next-auth": "^3.1.0",
     "next-with-apollo": "^5.1.0",
@@ -33,9 +35,11 @@
     "nookies": "^2.4.0",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "16.13.1",
     "react-dropzone": "^11.0.3",
     "react-redux": "^7.2.1",
+    "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "sass": "^1.26.10",
     "yup": "^0.29.2"
