--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "next build"
+    "start": "next start"
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
