--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node -r esm server.ts",
     "server": "nodemon -r esm server.ts",
-    "client": "npm start --prefix client",
+    "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Mohamed Elashmawy",
