--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/esm": "^3.2.0",
+    "@types/express": "^4.17.7",
+    "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.32",
-    "@types/node": "^14.0.26",
+    "@types/node": "^14.6.2",
     "@types/react": "^16.9.43",
+    "@types/typescript": "^2.0.0",
     "@types/yup": "^0.29.6",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
