--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^2.0.0-beta.3",
+    "apollo-link-retry": "^2.2.16",
     "apollo-link-ws": "^1.0.20",
     "apollo-upload-client": "^14.1.1",
     "axios": "^0.19.2",
@@ -42,12 +43,15 @@
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "sass": "^1.26.10",
+    "subscriptions-transport-ws": "^0.9.18",
+    "ws": "^7.3.1",
     "yup": "^0.29.2"
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^8.1.3",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
+    "@types/ws": "^7.2.6",
     "@types/yup": "^0.29.3",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.9.7"
