Added progress bat

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@types/nprogress": "^0.2.0",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^2.0.0-beta.3",
@@ -34,6 +35,7 @@
     "next-with-apollo": "^5.1.0",
     "node-sass": "^4.14.1",
     "nookies": "^2.4.0",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-awesome-slider": "^4.1.0",
