--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
-    "@apollo/link-error": "^2.0.0-beta.3",
     "@farbenmeer/react-spring-slider": "^1.2.1",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@material-ui/core": "^4.11.0",
@@ -18,7 +17,6 @@
     "@types/nprogress": "^0.2.0",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
-    "apollo-link-error": "^2.0.0-beta.3",
     "apollo-link-retry": "^2.2.16",
     "apollo-link-ws": "^1.0.20",
     "apollo-upload-client": "^14.1.1",
@@ -30,11 +28,11 @@
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
     "material-auto-rotating-carousel": "^3.0.2",
+    "moment": "^2.27.0",
     "next": "9.4.4",
     "next-auth": "^3.1.0",
     "next-with-apollo": "^5.1.0",
     "node-sass": "^4.14.1",
-    "nookies": "^2.4.0",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
@@ -59,5 +57,12 @@
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.9.7"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "author": "",
+  "license": "ISC"
 }
