--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^8.1.3",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
     "@types/ws": "^7.2.6",
