--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postinstall": "cd client && npm install",
     "start": "ts-node -r esm server/index.ts",
     "client-install": "npm install --prefix client",
+    "build": "npm run build --prefix client",
     "dev:backend": "nodemon -r esm server/index.ts",
     "dev:frontend": "npm run dev --prefix client",
     "dev": "concurrently --kill-others npm:dev:*"
