--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "postinstall": "cd client && npm install",
-    "start": "nodemon -r esm server/index.ts",
+    "start": "ts-node -r esm server/index.ts",
     "dev:backend": "nodemon -r esm server/index.ts",
     "dev:frontend": "npm run dev --prefix client",
     "dev": "concurrently --kill-others npm:dev:*"
